app/javascript/stylesheets/custom.scss
@import url('https://fonts.googleapis.com/css?family=Merriweather:900i');
@import url('https://fonts.googleapis.com/css2?family=Asar&family=Assistant&display=swap');

// key global options
$enable-deprecation-messages: true;
$enable-validation-icons: true;
$enable-responsive-font-sizes: true !default;
$enable-shadows: true;

$grid-gutter-width: 15px !default;

$theme-colors: (
  'primary': darken(#3caaff, 6.5%),
  'danger': hsl(345, 88%, 52%),
  'success': rgb(0, 188, 157),
  //#00ba7c
  'warning': #ff9200,
  'info': #59bcf5,
  'action': #e2d23f,
  'filter': rgba(0, 0, 0, 0.589),
  'gray-100': #f8f9fa,
  'gray-200': #e9ecef,
  'gray-300': #dee2e6,
  'gray-400': #ced4da,
  'gray-500': #adb5bd,
  'gray-600': #6c757d,
  'gray-700': #495057,
  'gray-800': #343a40,
  'gray-900': #212529,
);
$utilities: (
  'border-width': (
    property: border-width,
    class: border,
    values: (
      1: 1px,
      2: 2px,
      3: 3px,
      4: 4px,
      5: 5px,
    ),
  ),
);

$white: #fff !default;
$gray-100: #f8f9fa !default;
$gray-200: #e9ecef !default;
$gray-300: #dee2e6 !default;
$gray-400: #ced4da !default;
$gray-500: #adb5bd !default;
$gray-600: #6c757d !default;
$gray-700: #495057 !default;
$gray-800: #343a40 !default;
$gray-900: #212529 !default;
$gray-999: #121416 !default;
$black: #000 !default;
$cyan: #3dc8ff;
$danger: hsl(345, 88%, 52%);
$success: rgb(0, 188, 157);

// Body //
//$body-bg: $gray-900 !default;
//$body-color: $gray-400 !default;

// Radius and border //
$border-radius: 0.2rem;

// inputs //
$input-placeholder-color: rgba(77, 76, 76, 0.342);
$custom-select-color: rgba(77, 76, 76, 0.342);
$input-focus-color: $cyan;
$input-focus-border-color: $success;
$input-transition: border-color 0.15s;

$font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Assistant', Roboto,
  'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
  'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
  'Liberation Mono', 'Courier New', monospace !default;
$font-family-base: $font-family-sans-serif !default;
$font-family-display: 'Asar';

// logo
.navbar-brand {
  font-size: 21px;
  font-family: Merriweather, serif;
  font-weight: 900;
  font-style: italic;
  color: #ff002d !important;
}

//Card Hover
.card-body:hover {
  background-color: #f8f9fa;
}

// custom font for display class
.display-1,
.display-2,
.display-3,
.display-4,
.display-5 {
  font-family: $font-family-display;
}

//bootstrap toast positions
.toast {
  position: absolute;
  top: 80px;
  right: 10px;
  color: $gray-900 !important;
}

.vh-100 {
  min-height: 100vh;
}

.bg-filter {
  background-color: rgba(0, 0, 0, 0.589) !important;
}
.bg-666 {
  background-color: #292f33 !important;
}

.block {
  background-color: #292f33 !important;
  border-color: $gray-800;
}
.flatpickr-input {
  background-color: $white !important;
}

// dropzone
.dropzone {
  border-style: dashed;
  border-color: $gray-700;
  p {
    color: $gray-500;
  }
}
.dropzone .dz-preview.dz-image-preview {
  background: inherit;
}

// trix editor minor restyle. currently Action text is off.
.trix-button-row {
  .trix-button-group {
    border: none;
    .trix-button {
      background: $gray-700;
      border: none;
    }
  }
}
.field_with_errors {
  .form-control {
    border-color: $danger !important;
  }
}

form label {
  color: $gray-700;
  font-size: 0.8rem;
  font-weight: bold;
}

// Change how jobs show up on phone screens

// Dark mode Styles

[data-theme='dark'] {
  background-color: $gray-900 !important;
  color: $gray-400;
  .card {
    background-color: #292f33 !important;
    border-color: $gray-800;
  }
  .card-body:hover {
    background-color: #2d3539;
  }
  .card:last-of-type {
    margin-bottom: 0 !important;
  }
  .field_with_errors {
    .form-control {
      border-color: $danger !important;
    }
  }
  .form-control,
  .flatpickr-input {
    background-color: $gray-900 !important;
    border-color: $gray-800 !important;
    color: $cyan !important;
  }

  .input-group-text {
    border-color: $gray-800 !important;
  }
  .form-control:focus {
    background-color: $gray-900 !important;
    border-color: $success !important;
  }
  .navbar {
    background-color: $gray-999;
    border-color: $gray-900 !important;
  }
  .navbar-light .navbar-nav .nav-link {
    color: $gray-200 !important;
  }
  .navbar-light .navbar-toggler {
    color: $gray-200 !important;
    border-color: $gray-200 !important;
  }
  .jumbotron {
    background-color: #0d0e0e;
    color: $danger;
  }
  .dropzone {
    background-color: $gray-700;
  }
  // Backgrounds
  .bg-light {
    background-color: $gray-999 !important;
  }
  .bg-dark {
    background-color: $gray-999 !important;
  }
  .bg-gray-200 {
    background-color: $gray-900 !important;
  }
  .border-gray-300 {
    border-color: $gray-800 !important;
  }
  .bg-white {
    background-color: #292f33 !important;
  }
  .bg-black {
    background-color: #eee !important;
  }
  #main-nav > button {
    border-color: $gray-800 !important;
    background-color: rgba(255, 255, 255, 0.116) !important;
  }
}

